Early stopping in Value Iteration

--- a/Chapter 4 - Tabular Learning and the Bellman Equation.ipynb
+++ b/Chapter 4 - Tabular Learning and the Bellman Equation.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Chapter 4 - Tabular Learning and the Bellman Equation.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6YAlClKCo48pO6KgVTTDh",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/asrjy/ldrl/blob/main/Chapter%204%20-%20Tabular%20Learning%20and%20the%20Bellman%20Equation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,15 +12,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Tabular Learning and the Bellman Equation\n"
-      ],
       "metadata": {
         "id": "FI67L1UGs0FD"
-      }
+      },
+      "source": [
+        "## Tabular Learning and the Bellman Equation\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mxNThE-k8VJN"
+      },
       "source": [
         "The value of a state has been defined as, the expected total reward (discounted or not) from the state. \n",
         "ie., \n",
@@ -50,13 +35,13 @@
         "such simple environments with an obvious policy are not interesting and not generally seen in real life. for the interesting environments, optimal policies are hard to devise and even harder to prove their optimality. \n",
         "\n",
         "its not always good to be \"greedy\" ie., taking the action with the highest reward. \n"
-      ],
-      "metadata": {
-        "id": "mxNThE-k8VJN"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sq_6jwOt9Kgs"
+      },
       "source": [
         "### The Bellman equation of optimality\n",
         "\n",
@@ -73,13 +58,13 @@
         "P (a, i -> j) means probabilty of action a, issued in state i, ending up in state j.\n",
         "\n",
         "the equation is recursive in nature (the value of the state is defined using the value of target states), we pretend we know the values by randomly initializing them. "
-      ],
-      "metadata": {
-        "id": "sq_6jwOt9Kgs"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wTpoXssOPg_q"
+      },
       "source": [
         "### The value of the equation\n",
         "\n",
@@ -102,13 +87,13 @@
         "Q values are much more convenient in practice than Value functions because it's simpler to make decisions about actions obtained from Q function than using value of state obtained from value function. at any given state, the agent just needs to calculate the q values of all available actions at that state and pick the one with the maximum q value. to do the same with value functions, it needs to know the transitional probabilities before hand which is very rare in practice, so we need to estimate the transitional probablities of every action and state pair. \n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "wTpoXssOPg_q"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Lhmc-yhkPjx_"
+      },
       "source": [
         "### The Value Iteration method\n",
         "\n",
@@ -129,13 +114,13 @@
         "another issue with the value iteration approach is that we rarely know the transition probabilities of actions and rewards. the way gym works is, we observe the state, perform an action and only then we get the next observation and reward for the action performed. the only way to get the transition probabilties before hand is to cheat and look at the environment's code. \n",
         "\n",
         "so the only way to overcome this issue is to use the agent's history ie., keep track of what actions at what states gave how much reward. "
-      ],
-      "metadata": {
-        "id": "Lhmc-yhkPjx_"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "E6FFCb7ZsyR9"
+      },
       "source": [
         "### Value Iteration in practice\n",
         "\n",
@@ -145,16 +130,11 @@
         "- value table that stores the state and the calculated value of this state. \n",
         "\n",
         "we play 100 random steps from the environment updating the reward and transition table. then we perform value iteration loop over all states updating the value table. then we play several full episodes to check for improved values using value table. if average reward is above the 0.8 boundary for those test episodes, we stop training. we update reward and transition tables even during the testing phase. \n"
-      ],
-      "metadata": {
-        "id": "E6FFCb7ZsyR9"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install tensorboardX"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -162,11 +142,10 @@
         "id": "AZ13pnCG6sVb",
         "outputId": "185727bd-2e7a-43cb-d745-9b2860073e76"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting tensorboardX\n",
             "  Downloading tensorboardX-2.5-py2.py3-none-any.whl (125 kB)\n",
@@ -178,10 +157,18 @@
             "Successfully installed tensorboardX-2.5\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install tensorboardX"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "p1pzxeNG6cs3"
+      },
+      "outputs": [],
       "source": [
         "import gym\n",
         "import collections\n",
@@ -189,15 +176,15 @@
         "ENV_NAME = \"FrozenLake-v0\"\n",
         "GAMMA = 0.9\n",
         "TEST_EPISODES = 20"
-      ],
-      "metadata": {
-        "id": "p1pzxeNG6cs3"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "RSPvj0PH6l3d"
+      },
+      "outputs": [],
       "source": [
         "class Agent:\n",
         "  \"\"\"\n",
@@ -291,15 +278,19 @@
         "                      for action in range(self.env.action_space.n)\n",
         "      ]\n",
         "      self.values[state] = max(state_values)"
-      ],
-      "metadata": {
-        "id": "RSPvj0PH6l3d"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NbG2KkRoJU28",
+        "outputId": "9f282d11-40d1-476b-d94e-1145f58536ab"
+      },
+      "outputs": [],
       "source": [
         "if __name__ == \"__main__\":\n",
         "  test_env = gym.make(ENV_NAME)\n",
@@ -326,51 +317,43 @@
         "        print(f\"Solved in {iter_no} iteration\")\n",
         "        break\n",
         "  writer.close()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NbG2KkRoJU28",
-        "outputId": "9f282d11-40d1-476b-d94e-1145f58536ab"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Best reward updated 0.000 -> 0.050\n",
-            "Best reward updated 0.050 -> 0.050\n",
-            "Best reward updated 0.050 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n",
-            "Best reward updated 0.053 -> 0.053\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nYhHqxwFKUZM"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyM6YAlClKCo48pO6KgVTTDh",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Chapter 4 - Tabular Learning and the Bellman Equation.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
