--- a/Chapter 7 - Deep Q-Networks.ipynb
+++ b/Chapter 7 - Deep Q-Networks.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter 7 - Deep Q-Networks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMjLs1399XEHTyjEFPSpnv",
+      "authorship_tag": "ABX9TyOlYv9fXglS/HiJPe3ZnVUf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -322,11 +322,484 @@
         "\n",
         "even though rl models are not as compute hungry as state of the art image net models, dqn models from 2015 have 1.5m models. so care should be taken not to copy weights frequentyl in target network etc., a naive version of dqn that iterates over each sample of mini batch is twice as slow as the parallel version. a single extra copy of data batch could make it 13 times slower. \n",
         "\n",
-        "#### Wrappers\n"
+        "#### Wrappers\n",
+        "tracking atari games in rl is quite demanding. so openai includes gym wrappers that are transformations that influence only performance and address atari platform features that making learning long and unstable. \n",
+        "\n",
+        "some helpful wrappers used are:\n",
+        "- converting individual lives in games to seperate episodes. only useful on some environments. \n",
+        "- performing a random amount of no-op actions at the beginning of each episode to skip intros etc.,\n",
+        "- making an action decision every k steps instead of every single step. useful to reduce computational power required and helps in games that require past few frames to make a good decision.\n",
+        "- taking maximum of two pixels in the last two frames as some atari games have a flicker effect. these are not visible to human eye but could confuse the neural nets. \n",
+        "- pressing FIRE at the beginning of game. some games require us to press FIRE to begin. \n",
+        "- scaling every frame down from 210x160 three colors to single colored 84x84. some researchers do grayscale, some change y-color channel to ycbcr. \n",
+        "- clipping reward to -1, 0, 1values. different games can have varying score scales. \n",
+        "- converting observations from unsigned bytes to float32. \n",
+        "\n",
+        "we don't really need all of these wrappers for simple pong. sometimes when dqn is not converging, problem could be in wrongly wrapped environment. "
       ],
       "metadata": {
         "id": "5YJSUGPzvqVT"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import gym\n",
+        "import gym.spaces\n",
+        "import numpy as np\n",
+        "import collections\n"
+      ],
+      "metadata": {
+        "id": "122Mz_SGFEkf"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FireResetEnv(gym.Wrapper):\n",
+        "  \"\"\"\n",
+        "  This wrapper presses FIRE button in environments that require game to start. In addition to pressing FIRE,\n",
+        "  this wrapper checks for some corner cases present in some games. \n",
+        "  \"\"\"\n",
+        "  def __init__(self, env = None):\n",
+        "    super(FireResetEnv, self).__init__(env)\n",
+        "    assert env.unwrapped.get_action_meanings()[1] == \"FIRE\"\n",
+        "    assert len(env.unwrapped.get_action_meanings()) >= 3\n",
+        "\n",
+        "  def step(self, action):\n",
+        "    return self.env.step(action)\n",
+        "  \n",
+        "  def reset(self):\n",
+        "    self.env.reset()\n",
+        "    obs, _, done, _ = self.env.step(1)\n",
+        "    if done:\n",
+        "      self.env.reset()\n",
+        "    obs, _, done, _ = self.env.step(2)\n",
+        "    if done:\n",
+        "      self.env.reset()\n",
+        "    return obs"
+      ],
+      "metadata": {
+        "id": "4K1cc3hUFIl4"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MaxAndSkipEnv(gym.Wrapper):\n",
+        "  \"\"\"\n",
+        "  Combines the repitition of actions during k frames and pixels from two consecutive frames\n",
+        "  \"\"\"\n",
+        "  def __init__(self, env=None, skip = 4):\n",
+        "    super(MaxAndSkipEnv, self).__init__(env)\n",
+        "    self._obs_buffer = collections.deque(maxlen = 2)\n",
+        "    self._skip = skip\n",
+        "  def step(self, action):\n",
+        "    total_reward = 0.0\n",
+        "    done = None \n",
+        "    for _ in range(self._skip):\n",
+        "      obs, reward, done, info = self.env.step(action)\n",
+        "      self._obs_buffer.append(obs)\n",
+        "      total_reward += reward\n",
+        "      if done:\n",
+        "        break\n",
+        "    max_frame = np.max(np.stack(self._obs_buffer), axis=0)\n",
+        "    return max_frame, total_reward, done, info \n",
+        "  def reset(self):\n",
+        "    self._obs_buffer.clear()\n",
+        "    obs = self.env.reset()\n",
+        "    self._obs_buffer.append(obs)\n",
+        "    return obs"
+      ],
+      "metadata": {
+        "id": "clabmkEEGAso"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ProcessFrame84(gym.ObservationWrapper):\n",
+        "  \"\"\"\n",
+        "  converts color 210x160 image to grayscale 84x84. conversion to grayscale is done using colorimetric grayscale\n",
+        "  conversion which is closer to human color perception than simple averaging of color channels. converts to\n",
+        "  grayscale, resizes image to 84x84, crops top and bottom parts as a result.\n",
+        "  \"\"\"\n",
+        "  def __init__(self, env = None):\n",
+        "    super(ProcessFrame84, self).__init__(env)\n",
+        "    self.observation_space = gym.spaces.Box(low = 0, high = 255, shape = (84, 84, 1), dtype = np.uint8)\n",
+        "\n",
+        "  def observation(self, obs):\n",
+        "    return ProcessFrame84.process(obs)\n",
+        "\n",
+        "  @staticmethod\n",
+        "\n",
+        "  def process(frame):\n",
+        "    if frame.size == 210 * 160 * 3:\n",
+        "      img = np.reshape(frame, [210, 160, 3]).astype(np.float32)\n",
+        "    elif frame.size == 250 * 160 * 3:\n",
+        "      img = np.reshape(frame, [250, 160, 3]).astype(np.float32)\n",
+        "    else:\n",
+        "      assert False, \"Unknown resolution.\"\n",
+        "    img = img[:, :, 0] * 0.229 + img[:, :, 1] * 0.587 + img[:, :, 2] * 0.114\n",
+        "    resized_screen = cv2.resize(img, (84, 110), interpolation = cv2.INTER_AREA)\n",
+        "    x_t = resized_screen[18:102, :]\n",
+        "    x_t = np.reshape(x_t, [94, 84, 1])\n",
+        "    return x_t.astype(np.unit8)"
+      ],
+      "metadata": {
+        "id": "V59Egym3JteO"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BufferWrapper(gym.ObservationWrapper):\n",
+        "  \"\"\"\n",
+        "  creats a stack of subsequent frames along the first dimension and returns them as an observation. \n",
+        "  \"\"\"\n",
+        "  def __init__(self, env, n_steps, dtype = np.float32):\n",
+        "    super(BufferWrapper, self).__init__(env)\n",
+        "    self.dtype = dtype\n",
+        "    old_space = env.observation_space\n",
+        "    self.observation_space = gym.spaces.Box(\n",
+        "        old_space.low.repeat(n_steps, axis = 0)\n",
+        "        old_space.high.repeat(n_steps, axis = 0), dtype = dtype)\n",
+        "  \n",
+        "  def reset(self):\n",
+        "    self.buffer = np.zeros_like(\n",
+        "        self.observation_space.low, dtype = self.dtype\n",
+        "    )\n",
+        "    return self.observation(self.env.reset())\n",
+        "  \n",
+        "  def observation(self, observation):\n",
+        "    self.buffer[:-1] = self.buffer[1:]\n",
+        "    self.buffer[-1] = observation\n",
+        "    return self.buffer"
+      ],
+      "metadata": {
+        "id": "MJ2VkfWJLKz3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ImageToPyTorch(gym.ObservationWrapper):\n",
+        "  \"\"\"\n",
+        "  this wrapper changes the observation from HWC(height, width, channel) to CHW(channel, height, width) \n",
+        "  required by pytorch. \n",
+        "  \"\"\"\n",
+        "  def __init__(self, env):\n",
+        "    super(ImageToPyTorch, self).__init__(env)\n",
+        "    old_shape = self.observation_space.shape\n",
+        "    new_shape = (old_shape[-1], old_shape[0], old_shape[1])\n",
+        "    self.observation_space = gym.spaces.Box(\n",
+        "        low = 0.0, high = 1.0, shape = new_shape, dtype = np.float32\n",
+        "    )\n",
+        "  \n",
+        "  def observation(self, observation):\n",
+        "    return np.moveaxis(observation, 2, 0)"
+      ],
+      "metadata": {
+        "id": "5H9sKqCSoOWl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ScaledFloatFrame(gym.ObservationWrapper):\n",
+        "  \"\"\"\n",
+        "  this wrapper converts observation data from byte to float and sclaes every pixel value between 0.0 and 1.0\n",
+        "  \"\"\"\n",
+        "  def observation(self, obs):\n",
+        "    return np.array(obs).astype(np.float32)/255.0"
+      ],
+      "metadata": {
+        "id": "gXygq8Ylo8px"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_env(env_name):\n",
+        "  \"\"\"\n",
+        "  This function creates the environment and applies all wrappers on it\n",
+        "  \"\"\"\n",
+        "  env = gym.make(env_name)\n",
+        "  env = MaxAndSkipEnv(env)\n",
+        "  env = FireResetEnv(env)\n",
+        "  env = ProcessFrame84(env)\n",
+        "  env = ImageToPyTorch(env)\n",
+        "  env = BufferWrapper(env, 4)\n",
+        "  return ScaledFloatFrame(env)"
+      ],
+      "metadata": {
+        "id": "bExbj4vUpURI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### The DQN Model"
+      ],
+      "metadata": {
+        "id": "KWeZErv-ppvZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "m2ASvELcp3_t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DQN(nn.Module):\n",
+        "  def __init__(self, input_shape, n_actions):\n",
+        "    super(DQN, self).__init__()\n",
+        "    self.conv = nn.Sequential(\n",
+        "      nn.Conv2d(input_shape[0], 32, kernel_size = 8, stride = 4),\n",
+        "      nn.ReLU(),\n",
+        "      nn.Conv2d(32, 64, kernel_size = 4, stride = 2),\n",
+        "      nn.ReLU(),\n",
+        "      nn.Conv2d(64, 64, kernel_size = 3, stride = 1),\n",
+        "      nn.ReLU()\n",
+        "    )\n",
+        "    conv_out_size = self._get_conv_out(input_shape)\n",
+        "    self.fc = nn.Sequential(\n",
+        "      nn.Linear(conv_out_size, 512),\n",
+        "      nn.ReLU(),\n",
+        "      nn.Linear(512, n_actions)\n",
+        "    )\n",
+        "  \n",
+        "  def _get_conv_out(self, shape):\n",
+        "    \"\"\"\n",
+        "    we dont know the exact number of values in the output from convolution layer produced from the input shape.\n",
+        "    since we need to pass this number to the fully connected layer, this function creates a fake tensor of such\n",
+        "    shape and returns the number of parameters. \n",
+        "    \"\"\"\n",
+        "    o = self.conv(torch.zeros(1, *shape))\n",
+        "    return int(np.prod(o.size))\n",
+        "  \n",
+        "  def forward(self, x):\n",
+        "    \"\"\"\n",
+        "    pytorch does not have a flatten layer to flatten the 3d convoluted output to the fully connected layer.\n",
+        "    so this function does a forward pass using both conv net and fully connected network.\n",
+        "    the conv output is a 4d tensor. the first dimension is the batch size, second is the color channel which\n",
+        "    is our stack of subsequent frames, third and fourth are image dimensions,\n",
+        "    .view() allows us to reshape without creating a new memory object. \n",
+        "    \"\"\"\n",
+        "    conv_out = self.conv(x).view(x.size()[0], -1)\n",
+        "    return self.fc(conv_out)"
+      ],
+      "metadata": {
+        "id": "JIxmiXfkp60K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Training\n"
+      ],
+      "metadata": {
+        "id": "md1fmaLguyA0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install tensorboardX"
+      ],
+      "metadata": {
+        "id": "Ix0xOz8Xxa_z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from lib import wrappers\n",
+        "from lib import dqn_model\n",
+        "import argparse\n",
+        "import time\n",
+        "import numpy as np\n",
+        "import collections\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from tensorboardX import SummaryWriter"
+      ],
+      "metadata": {
+        "id": "R0WGDvz3xRyc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DEFAULT_ENV_NAME = \"PongNoFrameskip-v4\"\n",
+        "MEAN_REWARD_BOUND = 19.0"
+      ],
+      "metadata": {
+        "id": "rzDKmCg9xfIf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GAMMA = 0.99\n",
+        "BATCH_SIZE = 32 # Batch Size sampled from replay buffer\n",
+        "REPLAY_SIZE = 10000 # Maximum Capacity of the buffer\n",
+        "REPLAY_START_SIZE = 10000 # Count of frames we wait before starting training to populate buffer\n",
+        "LEARNING_RATE = 1e-4 # Learning Rate for Adam Optimizer\n",
+        "SYNC_TARGET_FRAMES = 1000 # Frequecy of model weight sync from training model to target model"
+      ],
+      "metadata": {
+        "id": "xZ4GZETdxlSD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EPSILON_DECAY_LAST_FRAME = 150000 # During first 150000 frames, epsilon is linearly reduced to 0.01.\n",
+        "# In the original paper this value was 1000000 (1 Million)\n",
+        "EPSILON_START = 1.0\n",
+        "EPSILON_FINAL = 0.01"
+      ],
+      "metadata": {
+        "id": "CwlUmSVRxuCs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Experience = collections.namedtuple('Experience', field_names = ['state', 'action', 'reward', 'done', 'new_state'])"
+      ],
+      "metadata": {
+        "id": "I7f6NIwZyOBf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ExperienceBuffer:\n",
+        "  def __init__(self, capacity):\n",
+        "    self.buffer = collections.dequeu(maxlen=capacity)\n",
+        "  \n",
+        "  def __len__(self):\n",
+        "    return len(self.buffer)\n",
+        "  \n",
+        "  def append(self, experience):\n",
+        "    self.buffer.append(experience)\n",
+        "  \n",
+        "  def sample(self, batch_size):\n",
+        "    indices = np.random.choice(len(self.buffer), batch_size, replace = False)\n",
+        "    states, actions, rewards, dones, next_states = zip(*[self.buffer[idx] for idx in indices])\n",
+        "    return np.array(states), np.array(actions), np.array(rewards, dtype = np.float32), np.array(dones, dtype = np.uint8), np.array(next_states)    "
+      ],
+      "metadata": {
+        "id": "oP2QD6lvymWG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Agent:\n",
+        "  def __init__(self, env, exp_buffer):\n",
+        "    self.env = env\n",
+        "    self.exp_buffer = exp_buffer\n",
+        "    self._reset()\n",
+        "  \n",
+        "  def _reset(self):\n",
+        "    self.state = env.reset()\n",
+        "    self.total_reward = 0.0\n",
+        "  \n",
+        "  @torch.no_grad()\n",
+        "\n",
+        "  def play_step(self, net, epsilon = 0.0, device = 'cpu'):\n",
+        "    \"\"\"\n",
+        "    Plays a step in the environment and stores its result in the buffer. Using epsilon, we eigher take a random\n",
+        "    step or use past model to obtain q values of all possible actions and choose the best\n",
+        "    \"\"\"\n",
+        "    done_reward = None\n",
+        "    if np.random.random() < epsilon:\n",
+        "      action = env.action_space.sample()\n",
+        "    else:\n",
+        "      state_a = np.array([self.state], copy = False)\n",
+        "      state_v = torch.tensor(state_a).to(device)\n",
+        "      q_vals_v = net(state_v)\n",
+        "      _, act_v = torch.max(q_vals, dim = 1)\n",
+        "      action = int(act_v.item())\n",
+        "    new_state, reward, is_done, _ = self.env.step(action)\n",
+        "    self.total_reward += reward\n",
+        "    exp = Experience(self.state, action, reward, is_done, new_state)\n",
+        "    self.exp_buffer.append(exp)\n",
+        "    self.state = new_state\n",
+        "    if is_done:\n",
+        "      done_reward = self.total_reward\n",
+        "      self._reset()\n",
+        "    return done_reward\n",
+        "  \n",
+        "  def calc_loss(batch, net, tgt_net, device = \"cpu\"):\n",
+        "    \"\"\"\n",
+        "    Calculates the loss for the sampled batch. \n",
+        "    batch: typle of arrays repacked by sample() in the experience buffer\n",
+        "    net: used to calculate gradients\n",
+        "    tgt_net: used to calculate values for the next states and this won't affect gradients. We use detach()\n",
+        "    to prevent gradients from flowing into the target network's graph. \n",
+        "    \"\"\"\n",
+        "    states, actions, rewards, dones, next_states = batch\n",
+        "    states_v = torch.tensor(np.array(states, copy = false)).to(device)\n",
+        "    next_states_v = torch.tensor(np.array(next_states, copy = False)).to(device)\n",
+        "    actions_v = torch.tensor(actions).to(device)\n",
+        "    rewards_v = torch.tensor(rewards).to(device)\n",
+        "    done_mask = torch.BoolTensor(dones).to(device)\n",
+        "    state_action_values = net(states_v).gather(1, actions_v.unsqueeze(-1)).squeeze(-1)\n",
+        "    \n"
+      ],
+      "metadata": {
+        "id": "CeFNFsmNzNjv"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
