--- a/Chapter 7 - Deep Q-Networks.ipynb
+++ b/Chapter 7 - Deep Q-Networks.ipynb
@@ -6,7 +6,7 @@
       "name": "Chapter 7 - Deep Q-Networks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOlYv9fXglS/HiJPe3ZnVUf",
+      "authorship_tag": "ABX9TyPE+cKfBJUfnLLCiygTXLnd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -793,10 +793,83 @@
         "    rewards_v = torch.tensor(rewards).to(device)\n",
         "    done_mask = torch.BoolTensor(dones).to(device)\n",
         "    state_action_values = net(states_v).gather(1, actions_v.unsqueeze(-1)).squeeze(-1)\n",
-        "    \n"
+        "    next_state_values = tgt_net(next_states_v).max(1)[0]\n",
+        "    next_state_values[done_mask] = 0.0\n",
+        "    next_state_values = next_state_values.detach()\n",
+        "    expected_state_action_values = next_state_values * GAMMA + rewards_v\n",
+        "    return nn.MSELoss()(state_action_values, expected_state_action_values)"
       ],
       "metadata": {
         "id": "CeFNFsmNzNjv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "  parser = argparse.ArgumentParser()\n",
+        "  parser.add_argument(\"--cuda\", default = False, action = \"store_true\", help = \"Enable CUDA\")\n",
+        "  parser.add_argument(\"--env\", default = DEFAULT_ENV_NAME, help = \"Name of the Environment, default = \" + DEFAULT_ENV_NAME)\n",
+        "  args = parser.parse_args()\n",
+        "  device = torch.device(\"cuda\" if args.cuda else \"cpu\")\n",
+        "  env = wrappers.make_env(args.env)\n",
+        "  net = dqn_model.DQN(env.observation_space.shape, env.action_space.n).to(device)\n",
+        "  tgt_net = dqn_model.DQN(env.observation_space.shape, env.action_space.n).to(device)\n",
+        "  writer = SummaryWriter(comment = \"-\" + args.env)\n",
+        "  print(net)\n",
+        "  buffer = ExperienceBuffer(REPLAY_SIZE)\n",
+        "  agent = Agent(env, buffer)\n",
+        "  epsilon = EPSILON_START\n",
+        "  optimizer = optim.Adam(net.parameters(), lr = LEARNING_RATE) \n",
+        "  total_rewards = []\n",
+        "  frame_idx = 0\n",
+        "  ts_frame = 0\n",
+        "  ts = time.time()\n",
+        "  best_m_reard = None\n",
+        "  while True:\n",
+        "    frame_idx += 1\n",
+        "    epsilon = max(EPSILON_FINAL, EPSILON_START - frame_idx/EPSILON_DECAY_LAST_FRAME)\n",
+        "    reward = agent.play_step(net, epsilon, device=device)\n",
+        "    if reward is not None:\n",
+        "      total_rewards.append(reward)\n",
+        "      speed = (frame_idx - ts_frame) / (time.time() - ts)\n",
+        "      ts_frame = frame_idx\n",
+        "      ts = time.time()\n",
+        "      m_reward = np.mean(total_rewards[-100:])\n",
+        "      print(\"%d: done %d games, reward %.3f, \"\n",
+        "            \"eps %.2f, speed %.2f f/s\" % (\n",
+        "          frame_idx, len(total_rewards), m_reward, epsilon,\n",
+        "          speed\n",
+        "      ))\n",
+        "      writer.add_scalar(\"epsilon\", epsilon, frame_idx)\n",
+        "      writer.add_scalar(\"speed\", speed, frame_idx)\n",
+        "      writer.add_scalar(\"reward_100\", m_reward, frame_idx)\n",
+        "      writer.add_scalar(\"reward\", reward, frame_idx)\n",
+        "      if best_m_reward is None or best_m_reward < m_reward:\n",
+        "        torch.save(net.state_dict(), args.env +\n",
+        "                    \"-best_%.0f.dat\" % m_reward)\n",
+        "        if best_m_reward is not None:\n",
+        "            print(\"Best reward updated %.3f -> %.3f\" % (\n",
+        "                best_m_reward, m_reward))\n",
+        "        best_m_reward = m_reward\n",
+        "      if m_reward > MEAN_REWARD_BOUND:\n",
+        "        print(\"Solved in %d frames!\" % frame_idx)\n",
+        "        break\n",
+        "    if len(buffer) < REPLAY_START_SIZE:\n",
+        "      continue\n",
+        "    if frame_idx % SYNC_TARGET_FRAMES == 0:\n",
+        "      tgt_net.load_state_dict(net.state_dict())\n",
+        "    optimizer.zero_grad()\n",
+        "    batch = buffer.sample(BATCH_SIZE)\n",
+        "    loss_t = calc_loss(batch, net, tgt_net, device=device)\n",
+        "    loss_t.backward()\n",
+        "    optimizer.step()\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "umd1sYHE2dvq"
       },
       "execution_count": null,
       "outputs": []
